add support for JDK 23 compilation (#1618)